manifests/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-managed-cert-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.global-static-ip-name: external-ip-address
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/v1beta1.FrontendConfig: argocd-frontend-config
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
    - host: cd.pauljs.io
      http:
        paths:
          - path: "/*"
            pathType: ImplementationSpecific
            backend:
              service:
                name: argocd-server
                port:
                  name: http
